--- a/home.html
+++ b/home.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blurfish: Your Local Fish Tank </title>
+
     <link rel="stylesheet" href="../static/styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sniglet:wght@800&display=swap" rel="stylesheet">
@@ -41,17 +43,17 @@
             <div class="team">
                 <div>
                     <img class="teamimage" src="https://media.gettyimages.com/photos/confident-young-man-wearing-purple-tshirt-picture-id1092658864?s=612x612">
-                    <p class="membername"> Elliot Green </p>
+                    <p class="membername"> Elliot Green | Shop Owner</p>
                 </div>
         
                 <div>
                     <img class="teamimage" src="https://media.gettyimages.com/photos/portrait-of-nonbinary-person-picture-id1056837924?s=612x612">
-                    <p class="membername">Olive Camer</p>
+                    <p class="membername">Olive Camer | Head Manager</p>
                 </div>
         
                 <div>
                     <img class="teamimage" src="https://media.gettyimages.com/photos/portrait-of-scared-young-man-against-white-backgrounds-picture-id1161393308?s=612x612">
-                    <p class="membername"> Brent Jackson</p>
+                    <p class="membername"> Brent Jackson | Head of PR</p>
             </div>
         </div>
         <hr>
