--- a/features.html
+++ b/features.html
@@ -44,6 +44,11 @@
             </p> 
         </div>
     </div>
+
+    <div class="section">
+        <h1 class=title>Bug Report: Slider</h1>
+        <div class="slider"><p>My Slider. Hover over me to slide to the right!</p></div>
+    </div>
     
    
 </body>
